--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,6 +45,6 @@ jobs:
         env:
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.maven_pgp_signingKey }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.maven_pgp_signingPassword }}
-          ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.maven_ossrhUsername }}
-          ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.maven_ossrhPassword }}
+          ORG_GRADLE_PROJECT_centralPortalUsername: ${{ secrets.CentralPortalUsername }}
+          ORG_GRADLE_PROJECT_centralPortalPassword: ${{ secrets.CentralPortalPassword }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
