--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,3 +1,7 @@
 [libraries]
 jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version = "7.0.0.202409031743-r" }
 agp = { module = "com.android.tools.build:gradle-api", version = "8.6.0" }
+maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version = "0.32.0" }
+
+[plugins]
+maven-publish = { id = "com.vanniktech.maven.publish", version = "0.32.0" }
